  - Required to save Message ID compression codebook.
  - Old archives are now refused to be opened by libuat. Package utility still
    can handle them.
- Check if all messages can be accessed using their Message IDs in verify
  utility.
- Check for empty 'Subject:' field in extract-msgmeta utility.
- Extraction of parent message from 'References:' field is now more relaxed.

v0.4 (2017-07-19)
-----------------

- Qt browser is now marked as deprecated.
- Use command line interface in query utility.
- Allow scanning for the last message index on usenet servers (Xref field).
- Add update-zstd utility.
- Add nntp-get utility.
- Further speed improvements in lexdist utility.
- Store levenshtein distance in lexdist data. Use this information to modify
  search score.
- Search for indirect links between messages in galaxy mode. An indirect link
  is a reply sent to group A to a message sent to group B. This is not a
  crosspost, but messages obviously should be cross-referenced.
- Text mode browser improvements:
  - Internal changes to message buffer ownership, resulting in decreased
    memory usage and fixing of a nasty bug.
  - Support for filtering in galaxy archive open list. Requires further work.
  - Search results now can be sorted by date in ascending or descending order.
    The default order is still determined by search score.
  - Search results preview now displays properly formatted message context and
    highlights most relevant search terms.
  - Display 'to:' field, which is used instead of 'newsgroups:' in mailing
    list messages.
  - Adjust search results display to workaround performance problems of some
    terminal emulators.
  - Display thread preview in galaxy warp mode.
  - Long lines are now properly broken into multiple lines on word boundaries.
- Search improvements:
  - Fuzzy search can be disabled for individual words.
  - Some words may be required to be present.
  - Some words may be required to be absent.